# model-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
notebooks/: data_collection.ipynb  modelling.ipynb  modelling_recipes.ipynb
src/: app.py
src/utils/: model_utils.py
