[tool.poetry]
name = "model-api"
version = "0.1.0"
description = "Api for trained model"
authors = ["Dominykas Šeputis <dom.seputis@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "model_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
cloudpickle = "^2.2.0"
pydantic = "^1.10.2"
pandas = "^1.5.2"
sklearn = "^0.0.post1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
pycln = "^2.1.2"
flake8-pyproject = "^1.2.2"
jupyterlab = "^3.5.2"
ipykernel = "^6.19.4"
nbqa = "^1.6.0"
pre-commit = "^2.21.0"

[tool.pycln]
all = true

[tool.flake8]
exclude = ['.git', '__pycache__', '.venv']
max_line_length = 99
max_doc_length = 79
max-complexity = 18

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 99

[tool.mypy]
files = "src/**/*.py"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
strict_equality = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
